[gd_scene load_steps=3 format=3 uid="uid://cvltyjhup08fb"]

[ext_resource type="Script" path="res://Code/end_screen.gd" id="1_y6ut4"]

[sub_resource type="LabelSettings" id="LabelSettings_r4xs8"]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_y6ut4")

[node name="Label" type="Label" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "You have dishonored your country...
"
label_settings = SubResource("LabelSettings_r4xs8")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1503.0
offset_top = -815.0
offset_right = 1147.0
offset_bottom = 928.0
color = Color(0.133196, 0.133196, 0.133196, 1)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Label2" type="Label" parent="."]
offset_left = -121.0
offset_top = -80.0
offset_right = 124.0
offset_bottom = 73.0
text = "
Thank you for playing our game
made by 

Jonas (THE man)

Sid (Asid-kun)

Jens (CaffeinatedLunacy)"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.4
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
